Docker build working
